fix code size on mobile

--- a/src/routes/diary/diary.less
+++ b/src/routes/diary/diary.less
@@ -317,7 +317,6 @@
     }
 
     pre[class*='language-'] {
-      max-width: fit-content;
       border-radius: 4px;
       border: 1px solid rgb(255 255 255 / 0.3);
       padding-right: 3em;
@@ -326,6 +325,8 @@
       position: relative;
       margin-top: 0.5em;
       grid-column-end: full-width-end;
+      width: fit-content;
+      max-width: 95vw;
 
       .copy-button {
         margin: 0.75rem;
